Reverted rought fix with missing color-text varriable

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -1,6 +1,6 @@
 :root {
   font-family: var(--font-family);
-  color: #000000;
+  color: var(--color-text);
   font-size: calc(var(--s0) + 0.5vw);
   hyphens: auto;
   line-height: var(--ratio);
